--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.4.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "sass": "^1.55.0"
