--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/oldremain/Next.js-blog#readme",
   "dependencies": {
-    "axios": "^0.27.2",
     "concurrently": "^7.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.6.4",
     "nodemon": "^2.0.20"
