--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/oldremain/Next.js-blog#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "concurrently": "^7.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
